--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ body {
   background-attachment: fixed; */
 }
 
-#filler {
+#filler,
+#progressbar {
   background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .6)), url(../img/projects-1.jpeg)center/cover no-repeat fixed;
 }
